--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.122.0">
-    <title>{{titulo}}</title>
+    <title>Signin Template · Bootstrap v5.3</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -94,34 +94,40 @@
             display: block !important;
         }
 
-        /*
-       * Header
-       */
 
-      .nav-masthead .nav-link {
-        color: rgba(255, 255, 255, .5);
-        border-bottom: .25rem solid transparent;
-      }
+        html,
+        body {
+          height: 100%;
+        }
 
-      .nav-masthead .nav-link:hover,
-      .nav-masthead .nav-link:focus {
-        border-bottom-color: rgba(255, 255, 255, .25);
-      }
+        .form-signin {
+          max-width: 330px;
+          padding: 1rem;
+        }
 
-      .nav-masthead .nav-link + .nav-link {
-        margin-left: 1rem;
-      }
+        .form-signin .form-floating:focus-within {
+          z-index: 2;
+        }
 
-      .nav-masthead .active {
-        color: #fff;
-        border-bottom-color: #fff;
-      }
+        .form-signin input[type="email"] {
+          margin-bottom: -1px;
+          border-bottom-right-radius: 0;
+          border-bottom-left-radius: 0;
+        }
+
+        .form-signin input[type="password"] {
+          margin-bottom: 10px;
+          border-top-left-radius: 0;
+          border-top-right-radius: 0;
+        }
     </style>
 
+
     <!-- Custom styles for this template -->
+    <link href="sign-in.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="d-flex align-items-center py-4 bg-body-tertiary" cz-shortcut-listen="true">
     <!--botao dark-->
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2" viewBox="0 0 16 16">
@@ -146,6 +152,7 @@
             </path>
         </symbol>
     </svg>
+
 
     <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
         <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
@@ -196,95 +203,43 @@
     </div>
     <!--fim botao dark-->
 
-    <!--barra lateral-->
-    <main class="d-flex" style="height: 100%;">
+    <!--caixa de login-->
+    <main class="form-signin w-100 m-auto">
+        <form>
+            <h1 class="h3 mb-3 fw-normal">Faça login</h1>
 
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
-            <a href="/usuario" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-              <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-              <span class="fs-4">{{titulo}}</span>
-            </a>
-            <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
-              <li class="nav-item">
-                <a href="/index" class="nav-link active" aria-current="page">
-                  <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-                  Home
-                </a>
-              </li>
-              <li>
-                <a href="../main.html" class="nav-link link-body-emphasis">
-                  <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-                  Dashboard
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link link-body-emphasis">
-                  <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-                  Orders
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link link-body-emphasis">
-                  <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-                  Products
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link link-body-emphasis">
-                  <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-                  Customers
-                </a>
-              </li>
-            </ul>
-            <hr>
-            <div class="dropdown">
-              <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                <strong>usuario</strong>
-              </a>
-              <ul class="dropdown-menu text-small shadow">
-                <li><a class="dropdown-item" href="/cadastro">New project...</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="/atualizacao">Profile</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/index">Sign out</a></li>
-              </ul>
+            <div class="form-floating">
+                <input type="text" class="form-control" id="floatingInput" placeholder="999.999.999-99">
+                <label for="floatingInput">CPF</label>
             </div>
-        </div>
-        <!--fim barra lateral-->
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Senha</label>
+            </div>
 
-        <!--início conteúdo-->
-        <div class="col"></div>
-
-            <div class="row col-9 py-3">
-                <!-- topo -->
-                <div class="card shadow" style="height: 85%; --bs-gutter-x: 0;">
-                    <div class="card-header d-flex justify-content-between align-items-center">
+            <div class="form-check text-start my-3" style="--bs-gap: .25rem 1rem;">
+                <div class="d-flex container text-center">
+                      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+                      <div class="col-7">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            lembre de mim
+                        </label>
+                      </div>
+                      <div class="col">
                         <div>
-                            <span class="ms-2">{{titulo}}</span>
+                            <a href="#" class="txt1">
+                                Esqueceu?
+                            </a>
                         </div>
-                        <div class="d-flex align-items-center">
-                            <a href="/listar"><button class="btn btn-outline-Success me-2">Consultar Tudo</button></a>
+                      </div>
+                  </div>
 
-                            <a href="/cadastro"><button class="btn btn-Success ms-3">Adicionar</button></a>
-                        </div>
-                    </div>
-                    <!-- Fim topo -->
-                    <div class="card-body">
-
-                        {% block conteudo %}
-                        {% endblock %}
-
-                    </div>
-                </div>
             </div>
-        </div>
-        <div class="col"></div>
-        <!--                                     fim conteúdo                                      -->
+        </form>
+        <a href="/usuario"><button class="btn btn-primary w-100 py-2">Entrar</button></a>
+        <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
     </main>
-
-
+    <!--fim caixa d login-->
 
 
     <!--javascript do botao-->
