--- a/app/templates/atualizacao.html
+++ b/app/templates/atualizacao.html
@@ -38,7 +38,7 @@
 
       </div>
       <div class="col-12">
-        <button type="submit" class="btn btn-primary">Atualizar</button>
+        <button>Atualizar</button>
       </div>
   </form>
 
