--- a/app/templates/excluicao.html
+++ b/app/templates/excluicao.html
@@ -2,7 +2,7 @@
 
 {% block conteudo %}
 
-  <form class="row g-3" action="/atualizar" method="POST">
+  <form class="row g-3" action="/excluir" method="POST">
       <div class="col-md-3">
 
 
