--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -205,7 +205,7 @@
 
     <!--caixa de login-->
     <main class="form-signin w-100 m-auto">
-        <form>
+        <form action="/usuario">
             <h1 class="h3 mb-3 fw-normal">Faça login</h1>
 
             <div class="form-floating">
@@ -235,8 +235,8 @@
                   </div>
 
             </div>
+            <button class="btn btn-primary w-100 py-2">Entrar</button>
         </form>
-        <a href="/usuario"><button class="btn btn-primary w-100 py-2">Entrar</button></a>
         <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
     </main>
     <!--fim caixa d login-->
