--- a/app/templates/atualizacao.html
+++ b/app/templates/atualizacao.html
@@ -37,10 +37,15 @@
         <input type="password" class="form-control" name="senha" id="senha">
       </div>
 
-      <div class="col-12">      </div>
+      <div class="col-12"></div>
 
-      <div class="col-12">
-        <button>Atualizar</button>
+
+      <div class="col-6">
+        <a href="/usuario" class="btn btn-danger">Cancelar</a>
+      </div>
+      <div class="col-5"></div>
+      <div class="col-1">
+        <button class="btn btn-Success">Atualizar</button>
       </div>
   </form>
 
