--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <script src="../static/js.js"></script>
 
 
 
@@ -258,26 +259,13 @@
         <div class="col"></div>
 
             <div class="row col-9 py-3">
-                <!-- topo -->
-                <div class="card shadow" style="height: 85%; --bs-gutter-x: 0;">
-                    <div class="card-header d-flex justify-content-between align-items-center">
-                        <div>
-                            <span class="ms-2">{{titulo}}</span>
-                        </div>
-                        <div class="d-flex align-items-center">
-                            <a href="/listar"><button class="btn btn-outline-Success me-2">Consultar Tudo</button></a>
 
-                            <a href="/cadastro"><button class="btn btn-Success ms-3">Adicionar</button></a>
-                        </div>
-                    </div>
-                    <!-- Fim topo -->
-                    <div class="card-body">
+
 
                         {% block conteudo %}
                         {% endblock %}
 
                     </div>
-                </div>
             </div>
         </div>
         <div class="col"></div>
