--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -1,22 +1,49 @@
 {% extends 'base.html' %}
 
 {% block conteudo %}
-  <form action="/cadastrarUsuario" method="POST">
+  <form class="row g-3" action="/cadastrarUsuario" method="POST">
+    <div class="col-md-3">      </div>
 
-    <label>CPF: </label>
-    <input type="text" name="cpf" id="cpf"/><br><br>
+      <div class="col-md-6">
+        <label class="form-label">CPF</label>
+        <input type="text" class="form-control" name="cpf" id="cpf" placeholder={{cpf}}>
+      </div>
 
-    <label>Nome: </label>
-    <input type="text" name="nome" id="nome"/><br><br>
+      <div class="col-12">
+        <label class="form-label">Nome</label>
+        <input type="text" class="form-control" name="nome" id="nome" placeholder="">
+      </div>
 
-    <label>Telefone: </label>
-    <input type="text" name="telefone" id="telefone"/><br><br>
+      <div class="col-6">
+        <label class="form-label">Telefone</label>
+        <input type="text" class="form-control" name="telefone" id="telefone" >
+      </div>
 
-    <label>Endereco: </label>
-    <input type="text" name="endereco" id="endereco"/><br><br>
+      <div class="col-6">
+        <label class="form-label">Endereço</label>
+        <input type="text" class="form-control" name="endereco" id="endereco" >
+      </div>
 
-    <button>Cadastrar</button>
+      <div class="col-md-6">
+        <label class="form-label">Email</label>
+        <input type="email" class="form-control" name="email" id="email">
+      </div>
 
+      <div class="col-md-6">
+        <label class="form-label">Senha</label>
+        <input type="password" class="form-control" name="senha" id="senha">
+      </div>
+
+      <div class="col-12"></div>
+
+
+      <div class="col-6">
+        <a href="/usuario" class="btn btn-danger">Cancelar</a>
+      </div>
+      <div class="col-5"></div>
+      <div class="col-1">
+        <button class="btn btn-Success">Cadastrar</button>
+    </div>
   </form>
 
 {% endblock %}
