--- a/app/templates/excluicao.html
+++ b/app/templates/excluicao.html
@@ -9,12 +9,19 @@
       </div><div class="col-md-6">
         <label class="form-label">CPF</label>
         <input type="text" class="form-control" name="cpf" id="cpf" placeholder={{cpf}}>
-      </div><div class="col-md-2">
-
-
       </div>
-      <div class="col-12">
-        <button>Excluir</button>
+      <div class="col-12"></div>
+      <div class="col-12"></div>
+      <div class="col-12"></div>
+
+
+      <div class="col-6">
+        <a href="/usuario" class="btn btn-danger">Cancelar</a>
+      </div>
+
+      <div class="col-5"></div>
+      <div class="col-1">
+        <button class="btn btn-Success">Excluir</button>
       </div>
   </form>
 
