--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -26,7 +26,7 @@
 
       <div class="col-md-6">
         <label class="form-label">Email</label>
-        <input type="email" class="form-control" name="email" id="email">
+        <input type="text" class="form-control" name="email" id="email">
       </div>
 
       <div class="col-md-6">
