--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -203,7 +203,6 @@
       <h3 class="float-md-start mb-0">Xbox</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
-        <a class="nav-link fw-bold py-1 px-0" href="#">Features</a>
         <a class="nav-link fw-bold py-1 px-0" href="/login">Entrar</a>
       </nav>
     </div>
@@ -214,12 +213,12 @@
     <h1>Gerencia os usuarios de seu jogo..</h1>
     <p class="lead">Com um sistema robusto de cadastro, login e autorização, você pode oferecer uma experiência personalizada, recompensar os jogadores por seu progresso e garantir a segurança com medidas de proteção de dados. Facilite a vida dos administradores com ferramentas de moderação e controle de acesso, mantendo sua comunidade de jogadores ativa e engajada. Não perca tempo – implemente agora um sistema completo de gerenciamento de usuários no seu jogo e eleve sua plataforma ao próximo nível!</p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
+      <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Leia mais</a>
     </p>
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p>Feito por<a href="https://getbootstrap.com/" class="text-white">jonatas</a>, by <a href="https://twitter.com/mdo" class="text-white">jonatas@mdo</a>.</p>
   </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
